# micar-whitepaper-linter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: art-stablecoin.json  emt-token.json  incomplete.json  other-crypto-asset.json  sample-draft.docx
reports/: sample-art-pass.txt  sample-incomplete-blockers.txt
src/micar_linter/: __init__.py  __main__.py  cli.py  document.py  linter.py  report.py  whitepaper.py
src/micar_linter/rules/: __init__.py  annex_i.py  annex_ii.py  annex_iii.py  base.py  common.py
tests/: test_cli.py  test_document.py  test_linter.py  test_rules.py  test_whitepaper.py
