[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "micar-whitepaper-linter"
version = "0.1.0"
description = "Deterministic first-pass linter for MiCAR crypto-asset white paper drafts."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "Sebastian Förste" },
]
keywords = ["micar", "compliance", "legal-tech", "crypto-asset", "regulatory", "eu"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Legal Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
micar-lint = "micar_linter.cli:main"

[project.urls]
Homepage = "https://github.com/sebastianforste/micar-whitepaper-linter"
Issues = "https://github.com/sebastianforste/micar-whitepaper-linter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/micar_linter"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
